# drc-sim-rust

./: .gitignore  Cargo.toml
src/: incoming_packet_parser.rs  lib.rs  main.rs  packet_organizer.rs  sockets.rs
tests/: common.rs  test.rs  test_incoming_packet_parser.rs  test_packet_organizer.rs
